added two more recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/brownies.html">Blonde Apple Brownies</a>
+        <ol>
+            <li><a href="./recipes/brownies.html">Blonde Apple Brownies</a></li>
+            <li><a href="./recipes/soft-oatmeal-cookies.html">Soft oatmeal cookies</a></li>
+            <li><a href="./recipes/sweet-grilled-peaches.html">Sweet Grilled Peaches</a></li>
+        </ol>
     </body>
 </html>
