--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -23,3 +23,5 @@
     <li>Beat butter, white sugar, brown sugar, and eggs together in a bowl using an electric mixer until smooth and creamy. Beat flour into creamed butter mixture until well combined; add baking powder and beat. Stir cinnamon into batter. Fold apples into batter; spread into the prepared baking dish.</li>
     <li>Bake in the preheated oven until a toothpick inserted in the center comes out with moist crumbs, about 45 minutes.</li>
 </ol>
+
+<a href="../index.html">HOME</a>
